--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT = 4000
 DB_URL = 
-DB_URL_LOCAL = "mongodb://localhost:27017/ecommerce"
+# DB_URL_LOCAL = "mongodb://localhost:27017/ecommerce"
+live_url = "mongodb+srv://rishig516:ram123@cluster0.5wjqvy6.mongodb.net/ecommerceAPI?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET_KEY = 'rishigoyal2708'
 
