--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 4000
 DB_URL = 
-# DB_URL_LOCAL = "mongodb://localhost:27017/ecommerce"
+DB_URL_LOCAL = "mongodb://localhost:27017/ecommerce"
 
 JWT_SECRET_KEY = 'rishigoyal2708'
 
